# vahan-pipecat-sarvam

./: .env.example  README.md  main.py  pyproject.toml  sarvam_stt.py
